[gd_scene load_steps=17 format=4 uid="uid://dxx8c2sa3xx5o"]

[ext_resource type="Script" path="res://src/player.gd" id="1_cor1m"]
[ext_resource type="Texture2D" uid="uid://cveplrig3pyge" path="res://assets/DampDungeons/Animations/Dungeon_HeroMan1.png" id="2_k4x7g"]
[ext_resource type="AudioStream" uid="uid://dbi8hht06frat" path="res://assets/music/crypteque.mp3" id="3_kkq8h"]
[ext_resource type="Script" path="res://addons/beatkeeper/beatkeeper_node.gd" id="4_i0p0d"]
[ext_resource type="Texture2D" uid="uid://7ng5s0rb0l6g" path="res://assets/CadencesOfHyrule/Global_Chest_Tile.png" id="5_c5it3"]
[ext_resource type="Texture2D" uid="uid://8nwoe0o2xcdx" path="res://assets/CadencesOfHyrule/Crypt_Tiles.png" id="6_l41bd"]
[ext_resource type="Texture2D" uid="uid://ci5ag704gil5f" path="res://assets/CadencesOfHyrule/Crypt_Diggable.png" id="7_nyvcp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7x406"]
atlas = ExtResource("2_k4x7g")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l4aa"]
atlas = ExtResource("2_k4x7g")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8682f"]
atlas = ExtResource("2_k4x7g")
region = Rect2(120, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_euon3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x406")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l4aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8682f")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gljkl"]
radius = 5.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0d5rr"]
texture = ExtResource("5_c5it3")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xsf7p"]
texture = ExtResource("6_l41bd")
texture_region_size = Vector2i(32, 32)
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/right_side = 0
3:0/0/terrains_peering_bit/bottom_right_corner = 0
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0/terrains_peering_bit/left_side = 0
3:0/0/terrains_peering_bit/top_left_corner = 0
3:0/0/terrains_peering_bit/top_side = 0
3:0/0/terrains_peering_bit/top_right_corner = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_right_corner = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:0/0/terrains_peering_bit/bottom_left_corner = 0
4:0/0/terrains_peering_bit/left_side = 0
4:0/0/terrains_peering_bit/top_left_corner = 0
4:0/0/terrains_peering_bit/top_side = 0
4:0/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0/terrains_peering_bit/left_side = 0
0:1/0/terrains_peering_bit/top_left_corner = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
3:1/0/terrains_peering_bit/top_right_corner = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/bottom_right_corner = 0
0:2/0/terrains_peering_bit/bottom_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/bottom_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/bottom_right_corner = 0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/bottom_left_corner = 0
2:2/0/terrains_peering_bit/left_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/bottom_left_corner = 0
3:2/0/terrains_peering_bit/left_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/bottom_right_corner = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/bottom_left_corner = 0
4:2/0/terrains_peering_bit/left_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/bottom_side = 0
0:3/0/terrains_peering_bit/bottom_left_corner = 0
0:3/0/terrains_peering_bit/left_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/bottom_right_corner = 0
1:3/0/terrains_peering_bit/bottom_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/bottom_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/right_side = 0
3:3/0/terrains_peering_bit/bottom_right_corner = 0
3:3/0/terrains_peering_bit/bottom_side = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/bottom_side = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/terrains_peering_bit/bottom_side = 0
0:4/0/terrains_peering_bit/top_side = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/left_side = 0
1:4/0/terrains_peering_bit/top_side = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/left_side = 0
2:4/0/terrains_peering_bit/top_left_corner = 0
2:4/0/terrains_peering_bit/top_side = 0
2:4/0/terrains_peering_bit/top_right_corner = 0
3:4/0 = 0
3:4/0/terrain_set = 0
4:4/0 = 0
4:4/0/terrain_set = 0
0:5/0 = 0
0:5/0/terrain_set = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/terrains_peering_bit/left_side = 0
1:5/0/terrains_peering_bit/top_left_corner = 0
1:5/0/terrains_peering_bit/top_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
3:5/0 = 0
3:5/0/terrain_set = 0
4:5/0 = 0
4:5/0/terrain_set = 0
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/terrain = 0
0:6/0/terrains_peering_bit/right_side = 0
0:6/0/terrains_peering_bit/top_side = 0
0:6/0/terrains_peering_bit/top_right_corner = 0
1:6/0 = 0
1:6/0/terrain_set = 0
2:6/0 = 0
2:6/0/terrain_set = 0
3:6/0 = 0
3:6/0/terrain_set = 0
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/terrain = 0
4:6/0/terrains_peering_bit/top_side = 0
0:7/0 = 0
0:7/0/terrain_set = 0
1:7/0 = 0
1:7/0/terrain_set = 0
2:7/0 = 0
2:7/0/terrain_set = 0
3:7/0 = 0
4:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
2:0/0 = 0
2:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/custom_data_0 = true
0:0/0 = 0
0:0/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wfaua"]
texture = ExtResource("7_nyvcp")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 1
1:0/0/terrains_peering_bit/right_side = 1
1:0/0/terrains_peering_bit/bottom_right_corner = 1
1:0/0/terrains_peering_bit/bottom_side = 1
1:0/0/terrains_peering_bit/bottom_left_corner = 1
1:0/0/terrains_peering_bit/left_side = 1
1:0/0/terrains_peering_bit/top_left_corner = 1
1:0/0/terrains_peering_bit/top_side = 1
1:0/0/terrains_peering_bit/top_right_corner = 1
1:0/0/custom_data_1 = true
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/custom_data_1 = true
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 1
3:0/0/terrains_peering_bit/bottom_side = 1
3:0/0/terrains_peering_bit/bottom_left_corner = 1
3:0/0/terrains_peering_bit/left_side = 1
3:0/0/terrains_peering_bit/top_left_corner = 1
3:0/0/terrains_peering_bit/top_side = 1
3:0/0/custom_data_1 = true
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/custom_data_1 = true
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 1
0:1/0/terrains_peering_bit/bottom_side = 1
0:1/0/terrains_peering_bit/bottom_left_corner = 1
0:1/0/terrains_peering_bit/left_side = 1
0:1/0/terrains_peering_bit/top_left_corner = 1
0:1/0/terrains_peering_bit/top_side = 1
0:1/0/custom_data_1 = true
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 1
1:1/0/terrains_peering_bit/right_side = 1
1:1/0/terrains_peering_bit/bottom_right_corner = 1
1:1/0/terrains_peering_bit/bottom_side = 1
1:1/0/terrains_peering_bit/top_side = 1
1:1/0/terrains_peering_bit/top_right_corner = 1
1:1/0/custom_data_1 = true
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 1
2:1/0/terrains_peering_bit/bottom_side = 1
2:1/0/terrains_peering_bit/top_side = 1
2:1/0/custom_data_1 = true
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/custom_data_1 = true
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/custom_data_1 = true
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 1
0:2/0/terrains_peering_bit/right_side = 1
0:2/0/terrains_peering_bit/bottom_right_corner = 1
0:2/0/terrains_peering_bit/bottom_side = 1
0:2/0/terrains_peering_bit/bottom_left_corner = 1
0:2/0/terrains_peering_bit/left_side = 1
0:2/0/custom_data_1 = true
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 1
1:2/0/terrains_peering_bit/bottom_side = 1
1:2/0/terrains_peering_bit/bottom_left_corner = 1
1:2/0/terrains_peering_bit/left_side = 1
1:2/0/custom_data_1 = true
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/custom_data_1 = true
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/custom_data_1 = true
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/custom_data_1 = true
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 1
0:3/0/terrains_peering_bit/bottom_side = 1
0:3/0/custom_data_1 = true
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 1
1:3/0/terrains_peering_bit/right_side = 1
1:3/0/terrains_peering_bit/bottom_right_corner = 1
1:3/0/terrains_peering_bit/bottom_side = 1
1:3/0/custom_data_1 = true
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/custom_data_1 = true
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/custom_data_1 = true
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/custom_data_1 = true
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrains_peering_bit/top_left_corner = 1
0:4/0/terrains_peering_bit/top_side = 1
0:4/0/terrains_peering_bit/top_right_corner = 1
0:4/0/custom_data_1 = true
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/custom_data_1 = true
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/custom_data_1 = true
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/custom_data_1 = true
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrains_peering_bit/top_left_corner = 1
4:4/0/terrains_peering_bit/top_side = 1
4:4/0/custom_data_1 = true
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/custom_data_1 = true
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/custom_data_1 = true
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/custom_data_1 = true
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrains_peering_bit/top_side = 1
3:5/0/terrains_peering_bit/top_right_corner = 1
3:5/0/custom_data_1 = true
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/custom_data_1 = true
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/custom_data_1 = true
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/custom_data_1 = true
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrains_peering_bit/top_side = 1
2:6/0/custom_data_1 = true
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/custom_data_1 = true
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/custom_data_1 = true
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/custom_data_1 = true
4:7/0 = 0

[sub_resource type="TileSet" id="TileSet_wyr0l"]
tile_size = Vector2i(32, 32)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Wall"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
terrain_set_0/terrain_1/name = "Dirt"
terrain_set_0/terrain_1/color = Color(0.561262, 0.33765, 0.630051, 1)
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "diggable"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_0d5rr")
sources/1 = SubResource("TileSetAtlasSource_xsf7p")
sources/2 = SubResource("TileSetAtlasSource_wfaua")

[node name="Game" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("1_cor1m")

[node name="Character" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_euon3")
animation = &"idle"
frame = 1
frame_progress = 0.581248

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_gljkl")

[node name="BeatKeeper" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kkq8h")
script = ExtResource("4_i0p0d")
Tempo = 130.0
half_beats = true

[node name="BeatTimer" type="Timer" parent="."]

[node name="TilemapLayer_Floor" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAJAAUAAAAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAIAAMAAQAAAAAAAAAJAAMAAQABAAAAAAAKAAMAAQAAAAAAAAALAAQAAQACAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAJAAcAAQAAAAAAAAAKAAcAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQACAAAAAAAHAAQAAQAAAAAAAAAHAAMAAQAAAAAAAAALAAMAAQACAAAAAAALAAcAAQAAAAAAAAAHAAcAAQAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAHAAkAAQADAAoAAAAIAAkAAQABAAoAAAAJAAkAAQACAAoAAAAHAAoAAQADAAkAAAALAAkAAQAEAAoAAAALAAoAAQADAAkAAAAGAAgAAQAAAAAAAAAHAAgAAQAAAAAAAAAIAAgAAQAAAAAAAAAJAAgAAQAAAAAAAAAKAAgAAQAAAAAAAAALAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAIAAoAAQAAAAAAAAAGAAkAAQACAAAAAAAFAAgAAQACAAAAAAAIAAsAAQABAAAAAAAJAAsAAQABAAAAAAANAP//AQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAIAAQAAAAAAAAAPAAIAAQAAAAAAAAANAAEAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAAOAP//AQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAAAAAAPAP//AQAAAAAAAAAPAAAAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAQAP//AQAAAAAAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAARAP//AQAAAAAAAAARAAAAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAASAP//AQAAAAAAAAASAAAAAQAAAAAAAAASAAEAAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAATAP//AQAAAAAAAAATAAAAAQAAAAAAAAATAAEAAQAAAAAAAAATAAIAAQAAAAAAAAATAAMAAQAAAAAAAAATAAQAAQAAAAAAAAATAAUAAQAAAAAAAAATAAYAAQAAAAAAAAATAAcAAQAAAAAAAAATAAgAAQAAAAAAAAATAAkAAQAAAAAAAAAUAP//AQAAAAAAAAAUAAAAAQAAAAAAAAAUAAEAAQAAAAAAAAAUAAIAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAQAAQAAAAAAAAAUAAUAAQAAAAAAAAAUAAYAAQAAAAAAAAAUAAcAAQAAAAAAAAAUAAgAAQAAAAAAAAAUAAkAAQAAAAAAAAAVAP//AQAAAAAAAAAVAAAAAQAAAAAAAAAVAAEAAQAAAAAAAAAVAAIAAQAAAAAAAAAVAAMAAQAAAAAAAAAVAAQAAQAAAAAAAAAVAAUAAQAAAAAAAAAVAAYAAQAAAAAAAAAVAAcAAQAAAAAAAAAVAAgAAQAAAAAAAAAVAAkAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAANAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAAPAAoAAQAAAAAAAAAQAAoAAQAAAAAAAAARAAoAAQAAAAAAAAASAAoAAQAAAAAAAAATAAoAAQAAAAAAAAAUAAoAAQAAAAAAAAAVAAoAAQAAAAAAAAAJAP7/AgAAAAAAAAAIAP7/AQAAAAAAAAAHAP7/AQAAAAAAAAAGAP7/AQAAAAAAAAAFAP7/AQAAAAAAAAAFAP//AQAAAAAAAAAGAP//AQAAAAAAAAAHAP//AQAAAAAAAAAIAP//AQAAAAAAAAAJAP//AgAAAAAAAAAJAAEAAQAAAAAAAAAIAAEAAgAAAAAAAAAHAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAJAAIAAQAAAAAAAAAIAAIAAQAAAAAAAAAJAP3/AQAAAAAAAAAIAP3/AQAAAAAAAAAHAP3/AQAAAAAAAAAGAP3/AQAAAAAAAAAFAP3/AQAAAAAAAAA=")
tile_set = SubResource("TileSet_wyr0l")

[node name="TilemapLayer_Wall" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAMAAMAAQAEAAMAAAAMAAQAAQABAAIAAAAMAAUAAQABAAIAAAAMAAYAAQABAAIAAAAMAAcAAQAEAAEAAAAMAAgAAQAEAAEAAAAMAAkAAQAEAAYAAAA=")
tile_set = SubResource("TileSet_wyr0l")

[node name="TilemapLayer_Dirt" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAQAAgABAAIAAAAEAAYAAgABAAIAAAAEAAQAAgAAAAIAAAADAAYAAgAAAAIAAAADAAQAAgAAAAIAAAACAAYAAgACAAAAAAACAAUAAgADAAAAAAACAAQAAgAAAAIAAAABAAYAAgABAAEAAAABAAUAAgABAAEAAAABAAQAAgABAAMAAAACAAcAAgAAAAQAAAABAAcAAgADAAUAAAADAAcAAgAAAAQAAAAEAAcAAgAEAAQAAAAFAAUAAgAEAAQAAAAEAAUAAgAAAAQAAAADAAUAAgADAAUAAAA=")
tile_set = SubResource("TileSet_wyr0l")

[connection signal="whole_beat" from="BeatKeeper" to="Player" method="_on_beat_keeper_whole_beat"]
[connection signal="timeout" from="BeatTimer" to="Player" method="_on_beat_timer_timeout"]
